--- a/Web-Micro-Services/p01.md
+++ b/Web-Micro-Services/p01.md
@@ -1,1 +1,187 @@
+# **Chapter 1: What is a Web Service?**
+
+## **Introduction**
+
+Think of a **web service** like a **waiter in a restaurant**.
+The customer (your app or the browser) asks for something.
+The waiter (the web service) carries the request to the kitchen (your backend code + database).
+The kitchen prepares the result, and the waiter brings it back to the customer.
+
+A web service does the same job—**it carries requests and brings back responses**, but instead of food, it delivers **data**.
+
+## **Concepts**
+
+* **Web Service:** A program that allows two systems to talk to each other over the internet.
+* **Request:** What the user is asking for (e.g., “give me the user list”).
+* **Response:** What the server sends back (e.g., the actual list of users).
+* **REST:** A simple and commonly used way to design web services.
+* **GraphQL:** A newer style that gives more control to the client about what data they want.
+
+## **Step-by-step Explanation**
+
+### **1. What exactly is a web service?**
+
+A web service is a small program that:
+
+* Receives a request from the frontend or another system
+* Processes information (sometimes using a database)
+* Sends back a reply
+
+Just like:
+
+```
+Customer -> Waiter -> Kitchen -> Waiter -> Customer
+```
+
+In tech terms:
+
+```
+Client -> Web Service -> Database/Logic -> Web Service -> Client
+```
+
+### **2. Why do we need web services?**
+
+Because apps on mobile, web browsers, or other systems need a **standard way** to communicate.
+Web services act like a universal language.
+
+Examples:
+
+* A shopping app checking product prices
+* A delivery app checking order status
+* A bank app requesting account balance
+
+All these happen through web services.
+
+---
+
+## **3. REST vs GraphQL (Very Simple Overview)**
+
+### **REST (like ordering from a fixed menu)**
+
+* You hit fixed URLs like `/products`, `/users`, `/orders/123`.
+* Each URL returns a fixed kind of data.
+* Very simple and easy to learn.
+* Most backend systems use REST.
+
+Example:
+When you call `/products`, you always get the same type of data.
+
+### **GraphQL (like choosing exactly what ingredients you want)**
+
+* You send **one request** and tell the server exactly what fields you want.
+* You can combine multiple data pieces in one request.
+* Useful when the client wants flexibility.
+
+Example:
+Instead of getting the whole product record, you can ask:
+
+```
+Give me only product name and price
+```
+
+---
+
+## **Code Examples**
+
+### **Simple REST API (FastAPI example)**
+
+```python
+from fastapi import FastAPI
+
+app = FastAPI()
+
+@app.get("/greet")
+def greet():
+    return {"message": "Hello! I am your web service."}
+```
+
+### **Very Simple GraphQL Example**
+
+Using Strawberry (only to show the idea):
+
+```python
+import strawberry
+from strawberry.fastapi import GraphQLRouter
+
+@strawberry.type
+class Query:
+    hello: str = "Hello from GraphQL!"
+
+schema = strawberry.Schema(query=Query)
+graphql_app = GraphQLRouter(schema)
+```
+
+Client can ask:
+
+```graphql
+{
+  hello
+}
+```
+
+---
+
+## **How Codex Helps**
+
+You can ask Codex to:
+
+### **1. Generate a REST API**
+
+Prompt example:
+
+```
+Create a FastAPI service with routes /users, /products, and /orders.
+Each should return sample JSON data.
+```
+
+### **2. Create folder structures**
+
+Prompt:
+
+```
+Generate a clean backend project structure for a FastAPI + MySQL app.
+Include routers, models, and services folders.
+```
+
+### **3. Add new features**
+
+Prompt:
+
+```
+Add a new API endpoint /customers that returns sample customer data.
+Use the existing project structure.
+```
+
+### **4. Debug**
+
+Prompt:
+
+```
+My FastAPI is giving a 422 error. Here is the code: <paste>. Tell me what's wrong.
+```
+
+Codex can read, improve, and fix your code step-by-step.
+
+---
+
+## **Small Exercise**
+
+Create a simple REST API with one endpoint:
+
+`/hello`
+
+It should return:
+
+```json
+{"message": "Welcome to Web Services!"}
+```
+
+Then ask Codex:
+
+```
+Improve this API by adding another endpoint /info that returns your name and city.
+```
+
+---
+
 
