--- a/Web-Micro-Services/p02.md
+++ b/Web-Micro-Services/p02.md
@@ -1,1 +1,256 @@
+# **Chapter 2: Basics of HTTP**
+
+## **Introduction**
+
+When two systems talk to each other on the internet, they use a common language called **HTTP**.
+Think of HTTP like **rules used by a courier service**:
+
+* The courier needs to know **what type of job** to do (pick up, deliver, update something, etc.).
+* The courier needs to know **where to go** (the address).
+* The courier brings **a message or a package**.
+
+HTTP works exactly like this for APIs.
+Your API is the courier delivery system between two computers.
+
+The most important “job types” in HTTP are:
+**GET, POST, PUT, DELETE** — just like simple actions we do in real life.
+
+## **Concepts**
+
+* **HTTP:** A set of rules that computers use to send and receive data.
+* **GET:** Ask for information.
+* **POST:** Add new information.
+* **PUT:** Update existing information.
+* **DELETE:** Remove information.
+* **API Communication:** Systems exchange messages in a structured format (usually JSON).
+
+## **Step-by-step Explanation**
+
+### **1. What is HTTP?**
+
+HTTP stands for **HyperText Transfer Protocol**.
+Think of it as a **simple communication rulebook** that allows:
+
+* browsers to talk to servers
+* apps to talk to backend systems
+* two services to talk to each other
+
+When you open a website, click a button, or send data — it all happens through HTTP.
+
+---
+
+## **2. Understanding GET, POST, PUT, DELETE (Simple Examples)**
+
+### **A. GET — “Bring me something”**
+
+Like asking:
+
+* “Show me the menu.”
+* “Get me the list of products.”
+
+No changes are made. You only receive information.
+
+Example URL:
+`GET /products`
+
+---
+
+### **B. POST — “Add this new item”**
+
+Like telling a shop:
+
+* “Please add this new product to your inventory.”
+
+POST creates something new.
+
+Example URL:
+`POST /products`
+Body:
+
+```json
+{"name": "Laptop", "price": 55000}
+```
+
+---
+
+### **C. PUT — “Update this item”**
+
+Like telling:
+
+* “Change the price of the laptop to 52000.”
+
+PUT updates something that already exists.
+
+Example:
+`PUT /products/1`
+Body:
+
+```json
+{"price": 52000}
+```
+
+---
+
+### **D. DELETE — “Remove this item”**
+
+Like telling:
+
+* “Remove product #1 from the list.”
+
+Example:
+`DELETE /products/1`
+
+---
+
+## **3. How APIs Talk Between Systems**
+
+APIs exchange messages just like two people exchanging letters.
+
+### **A. The client sends a request**
+
+The request contains:
+
+* URL (like an address)
+* HTTP method (GET/POST/PUT/DELETE)
+* Optional data (JSON)
+* Headers (extra information like authentication)
+
+### **B. The server understands the request**
+
+The server looks at:
+
+* what the client wants
+* which function to call
+* what to return
+
+### **C. The server sends back a response**
+
+The response includes:
+
+* **status code** (success or error)
+* **data** (usually JSON)
+* **message** (optional text)
+
+### **Simple Communication Diagram**
+
+```
+Client (mobile/web/app)
+        |
+        |  HTTP Request (GET/POST/PUT/DELETE)
+        v
+    Web Service
+        |
+        |  Database / Logic
+        v
+   Sends back HTTP Response (JSON)
+```
+
+### **Real-Life Example**
+
+Imagine a food delivery app:
+
+* The app asks the backend:
+  `GET /orders/123` → “Show order details.”
+
+* When a customer places a new order:
+  `POST /orders` → “Create a new order.”
+
+* If they want to change the address:
+  `PUT /orders/123` → “Update delivery address.”
+
+* If they cancel the order:
+  `DELETE /orders/123` → “Delete this order.”
+
+---
+
+## **Code Examples**
+
+### **GET Example (FastAPI)**
+
+```python
+@app.get("/products")
+def get_products():
+    return {"items": ["Laptop", "Keyboard", "Mouse"]}
+```
+
+### **POST Example**
+
+```python
+@app.post("/products")
+def add_product(product: dict):
+    return {"message": "Product created", "data": product}
+```
+
+### **PUT Example**
+
+```python
+@app.put("/products/{product_id}")
+def update_product(product_id: int, product: dict):
+    return {"message": "Product updated", "product_id": product_id, "data": product}
+```
+
+### **DELETE Example**
+
+```python
+@app.delete("/products/{product_id}")
+def delete_product(product_id: int):
+    return {"message": "Product deleted", "product_id": product_id}
+```
+
+---
+
+## **How Codex Helps**
+
+### ✔ Generate API endpoints quickly
+
+Prompt:
+
+```
+Create FastAPI routes for GET, POST, PUT, DELETE for a product service.
+Return dummy data.
+```
+
+### ✔ Improve or refactor your existing code
+
+Prompt:
+
+```
+Refactor my API code to use Pydantic models for validation.
+<your code>
+```
+
+### ✔ Generate request/response examples
+
+Prompt:
+
+```
+Generate example JSON bodies for POST and PUT requests for a user service.
+```
+
+### ✔ Debug HTTP and routing issues
+
+Prompt:
+
+```
+My POST request is returning 422 error. Here is my code and request body. Fix the issue.
+```
+
+---
+
+## **Small Exercise**
+
+Create four endpoints for a simple **customer** API:
+
+* `GET /customers`
+* `POST /customers`
+* `PUT /customers/{id}`
+* `DELETE /customers/{id}`
+
+Then ask Codex:
+
+```
+Improve this API by adding validation for customer name and email.
+```
+
+---
 
