--- a/Web-Micro-Services/p06.md
+++ b/Web-Micro-Services/p06.md
@@ -1,1 +1,364 @@
+# **Chapter 6: MySQL Refresher**
+
+## **Introduction**
+
+Before building APIs or microservices, it is important to quickly refresh how MySQL works.
+Think of MySQL as a **big notebook** where your backend stores information in pages (tables).
+FastAPI will read from this notebook and write into it.
+
+In this chapter we will keep everything **very simple**:
+
+* How to create a database
+* How to create tables
+* How foreign keys work
+* A quick refresher of SQLAlchemy ORM (because FastAPI uses it a lot)
+
+This chapter builds a strong base for database-backed microservices.
+
+---
+
+## **Concepts**
+
+### **1. Database**
+
+A database is like a **folder** that holds multiple tables.
+
+### **2. Table**
+
+A table is like an **Excel sheet** with rows and columns.
+
+### **3. Primary Key**
+
+A unique ID for each row.
+Example: `patient_id`, `product_id`.
+
+### **4. Foreign Key**
+
+A way to connect two tables, like linking a student to their school.
+
+### **5. ORM**
+
+ORM means *Object–Relational Mapping*.
+It lets you work with tables using Python classes instead of writing SQL manually.
+
+---
+
+## **Step-by-step Explanation**
+
+---
+
+### **Step 1: Create a Database**
+
+```sql
+CREATE DATABASE hospital;
+USE hospital;
+```
+
+This creates a new notebook (`hospital`) and opens it.
+
+---
+
+### **Step 2: Create Simple Tables**
+
+Let’s create a `patients` table.
+
+```sql
+CREATE TABLE patients (
+    id INT AUTO_INCREMENT PRIMARY KEY,
+    name VARCHAR(100),
+    age INT,
+    gender VARCHAR(10)
+);
+```
+
+This is like creating an Excel sheet with the columns:
+
+* id
+* name
+* age
+* gender
+
+---
+
+### **Step 3: Foreign Key Example**
+
+Foreign keys help connect two tables.
+
+Example:
+A **patient** may have many **visits**.
+
+We first create the `visits` table:
+
+```sql
+CREATE TABLE visits (
+    id INT AUTO_INCREMENT PRIMARY KEY,
+    patient_id INT,
+    visit_date DATE,
+    doctor VARCHAR(100),
+    notes TEXT,
+    FOREIGN KEY (patient_id) REFERENCES patients(id)
+);
+```
+
+Here:
+
+* `patient_id` connects to `patients.id`
+* This ensures:
+
+  * A visit **must belong** to a real patient
+  * No visits with invalid patient IDs
+
+This is similar to saying:
+“A visit cannot exist unless the patient exists.”
+
+---
+
+### **Step 4: Insert Simple Data**
+
+```sql
+INSERT INTO patients (name, age, gender)
+VALUES ("Rahul", 30, "Male");
+```
+
+Insert a visit:
+
+```sql
+INSERT INTO visits (patient_id, visit_date, doctor, notes)
+VALUES (1, "2025-01-15", "Dr. Sen", "Fever and bodyache");
+```
+
+---
+
+### **Step 5: Fetch Data**
+
+Get all patients:
+
+```sql
+SELECT * FROM patients;
+```
+
+Get all visits of a patient:
+
+```sql
+SELECT * FROM visits WHERE patient_id = 1;
+```
+
+---
+
+## **Basic SQLAlchemy ORM Refresher**
+
+SQLAlchemy lets you use Python classes to work with MySQL.
+
+---
+
+### **Step 6: Install SQLAlchemy + MySQL Driver**
+
+```bash
+pip install sqlalchemy pymysql
+```
+
+---
+
+### **Step 7: Create a Database Engine**
+
+```python
+from sqlalchemy import create_engine
+from sqlalchemy.orm import sessionmaker, declarative_base
+
+DATABASE_URL = "mysql+pymysql://root:password@localhost/hospital"
+
+engine = create_engine(DATABASE_URL)
+SessionLocal = sessionmaker(bind=engine)
+
+Base = declarative_base()
+```
+
+---
+
+### **Step 8: Define ORM Models**
+
+These models match your SQL tables.
+
+#### **Patient Model**
+
+```python
+from sqlalchemy import Column, Integer, String
+from sqlalchemy.orm import relationship
+
+class Patient(Base):
+    __tablename__ = "patients"
+
+    id = Column(Integer, primary_key=True, index=True)
+    name = Column(String(100))
+    age = Column(Integer)
+    gender = Column(String(10))
+
+    visits = relationship("Visit", back_populates="patient")
+```
+
+---
+
+#### **Visit Model**
+
+```python
+from sqlalchemy import Column, Integer, String, Date, ForeignKey
+from sqlalchemy.orm import relationship
+
+class Visit(Base):
+    __tablename__ = "visits"
+
+    id = Column(Integer, primary_key=True, index=True)
+    patient_id = Column(Integer, ForeignKey("patients.id"))
+    visit_date = Column(Date)
+    doctor = Column(String(100))
+    notes = Column(String(255))
+
+    patient = relationship("Patient", back_populates="visits")
+```
+
+**What this means:**
+
+* `Patient` ↔ `Visit` have a parent-child relationship
+* You can now easily fetch visits like:
+
+```python
+db_patient = session.query(Patient).first()
+print(db_patient.visits)
+```
+
+---
+
+### **Step 9: Create Tables from ORM**
+
+```python
+Base.metadata.create_all(bind=engine)
+```
+
+This is like telling SQLAlchemy:
+“Please create the SQL tables for these Python classes.”
+
+---
+
+### **Step 10: Insert Data with ORM**
+
+```python
+db = SessionLocal()
+
+new_patient = Patient(name="Rahul", age=30, gender="Male")
+db.add(new_patient)
+db.commit()
+db.refresh(new_patient)
+
+print(new_patient.id)
+```
+
+Insert visit:
+
+```python
+new_visit = Visit(
+    patient_id=new_patient.id,
+    visit_date="2025-01-15",
+    doctor="Dr. Sen",
+    notes="Fever"
+)
+
+db.add(new_visit)
+db.commit()
+```
+
+---
+
+### **Step 11: Query with ORM**
+
+```python
+patients = db.query(Patient).all()
+for p in patients:
+    print(p.name)
+```
+
+Get visits:
+
+```python
+visits = db.query(Visit).filter(Visit.patient_id == 1).all()
+```
+
+---
+
+## **How Codex Helps**
+
+Codex can make MySQL + SQLAlchemy work extremely easy:
+
+### **1. Generate SQL scripts**
+
+Ask:
+
+> “Codex, generate tables for patients and visits with foreign keys.”
+
+Codex writes the SQL for you.
+
+---
+
+### **2. Convert SQL tables → ORM models**
+
+You can say:
+
+> “Create SQLAlchemy models for these MySQL tables.”
+
+Codex automatically creates the correct Python classes.
+
+---
+
+### **3. Create CRUD operations**
+
+You can ask:
+
+> “Generate create, read, update, delete functions for the Visit model.”
+
+---
+
+### **4. Fix SQLAlchemy errors**
+
+Paste any error and Codex explains the issue clearly.
+
+---
+
+### **5. Create full FastAPI + SQLAlchemy integration**
+
+Codex can generate:
+
+* Database connection file
+* Schema (Pydantic)
+* CRUD services
+* Routes
+
+All in a clean folder structure.
+
+---
+
+## **Small Exercise**
+
+### **Task**
+
+1. Create a new MySQL database called `clinic`.
+2. Make two tables:
+
+   * `doctors` (id, name, speciality)
+   * `appointments` (id, doctor_id, date, patient_name)
+3. Add a **foreign key**: `doctor_id` → `doctors.id`
+4. Create SQLAlchemy ORM models for both tables.
+5. Write a simple Python script to:
+
+   * Insert a doctor
+   * Insert an appointment for that doctor
+   * Fetch all appointments
+
+### **Bonus**
+
+Ask Codex to:
+
+* Generate CRUD functions
+* Generate FastAPI routes for these models
+* Create a folder structure `routers`, `models`, `schemas`, `services`
+
+---
 
